Fixed body alignment on smaller screens.

--- a/src/styles/HomeBody.css
+++ b/src/styles/HomeBody.css
@@ -158,6 +158,6 @@ img {
     .home-desc-container > h1 {
         justify-content: center;
         align-items: center;
-        text-align: center;
+        text-align: left;
     }
 }
